feat: simplify structure chain using Stream api
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>