@@ -70,14 +70,14 @@ public final class MarketingApp {
 
             List<Person> developers = graph.traversalVertex()
                     .has("occupation", "Developer")
-                    .<Person>result().collect(toList());
+                    .<Person>result().toList();
 
             List<Person> peopleWhoDeveloperKnows = graph.traversalVertex()
                     .has("salary", gte(3_000D))
                     .has("age", between(20, 25))
                     .has("occupation", "Developer")
                     .out("knows")
-                    .<Person>result().collect(toList());
+                    .<Person>result().toList();
 
             List<Person> both = graph.traversalVertex()
                     .has("salary", gte(3_000D))
@@ -87,7 +87,7 @@ public final class MarketingApp {
                     .bothV()
                     .<Person>result()
                     .distinct()
-                    .collect(toList());
+                    .toList();
 
             List<Person> couple = graph.traversalVertex()
                     .has("salary", gte(3_000D))
@@ -98,7 +98,7 @@ public final class MarketingApp {
                     .bothV()
                     .<Person>result()
                     .distinct()
-                    .collect(toList());
+                    .toList();
 
             System.out.println("Developers has salary greater than 3000 and age between 20 and 25: " + developers);
             System.out.println("Person who the Developers target know: " + peopleWhoDeveloperKnows);
