@@ -32,7 +32,7 @@ public class App3 {
             Person saved = cassandraTemplate.save(person, ConsistencyLevel.ONE);
             System.out.println("Person saved" + saved);
             List<Person> people = cassandraTemplate.<Person>cql("select * from developers.Person where id = 1")
-                    .collect(Collectors.toList());
+                    .toList();
             System.out.println("Entity found: " + people);
 
         }
